name:                cspreport
version:             1.0.0
synopsis:            CSP Report archival
homepage:            https://github.com/fedora-infra/cspreport
license:             MIT
license-file:        LICENSE
author:              Rick Elrod
maintainer:          relrod@redhat.com
copyright:           (C) 2019 Red Hat, Inc.
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable cspreport
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson >= 1.4 && < 1.5
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , iproute >= 1.7.4 && < 1.8
                     , scotty >= 0.11 && < 0.12
                     , text >= 1 && < 1.3
                     , postgresql-simple >= 0.6 && < 0.7
                     , wai >= 3 && < 4
  hs-source-dirs:      src
  default-language:    Haskell2010
